--- a/content/css/main.css
+++ b/content/css/main.css
@@ -10,25 +10,24 @@ body {
   font-family: montserrat-thin;
   background-color: #DADADA;
   box-sizing: border-box;
+  font-size: .9em;
 }
 h1 {
   margin: .5em 0em .25em 0em;
 }
+
 .grid-wrapper {
+  font-family: montserrat;
   max-width: 32em;
   padding:1em;
   background-color: #99ABBB;
   display: grid;
-  grid-template-columns: 15em repeat(1, 1fr) ;
+  grid-template-columns: 15em repeat(1, 1fr);
   border-radius: 20px;
-}
-#inputGrid {
-  font-family: montserrat;
   margin-bottom: 1em;
 }
 #outputGrid {
-  font-family: montserrat;
-  margin-bottom: 1em;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 button {
@@ -41,33 +40,28 @@ button {
   padding: 0.5em;
   margin:1em 0.4em;
 }
-
 button:hover {
   cursor: pointer;
 }
-
 #btnCalc {
   background-color: #559955;
   color: #FFFFFF;
   grid-column: 1 / span 2;
   max-width: 30em;
 }
-
 #btnCalc:active { 
   background-color: #448844;
 }
-
 #btnAdd, #btnRm {
   background-color: #555555;
   color: #FFFFFF;
   max-width: 15em;
 }
-
 #btnAdd:active, #btnRm:active{
   background-color: #383838;
 }
 
-input[type="text"] {
+input[type="text"], #scopeChoice{
   font-family: montserrat;
   font-size: 1em;
   background-color: #DADADA;
@@ -75,8 +69,9 @@ input[type="text"] {
   outline:none;
   border:none;
   border-radius: 20px;
-  padding: 0.5em;
-  margin:1em 0.4em;
+  padding: 0.5em 1em;
+  margin: 1em 0.4em;
+  width: 14em;
 }
 input[type="text"]:focus {
   border-radius: 20px;
@@ -90,13 +85,15 @@ input[type="text"]:focus {
   margin: .8em 0em;
   padding: 0.5em;
 }
-.textInput {
-  width: 15em;
-  padding: 0.5em;
-  margin: 1em 0em 1em 2em;
-}
 .outputLabel {
   width: 12em;
   padding: 0em;
   margin: 1em 0em 1em 2em;
+}
+.outputWk, .outputMn, .outputYr{
+  display: grid;
+  grid-template-columns: 15em repeat(1, 1fr);
+}
+.hide {
+  display: none;
 }
