--- a/content/css/main.css
+++ b/content/css/main.css
@@ -18,11 +18,12 @@ h1 {
 
 .grid-wrapper {
   font-family: montserrat;
+  min-width: 25em;
   max-width: 32em;
   padding:1em;
   background-color: #99ABBB;
   display: grid;
-  grid-template-columns: 15em repeat(1, 1fr);
+  grid-template-columns: 35% repeat(1, 1fr);
   border-radius: 20px;
   margin-bottom: 1em;
 }
@@ -46,8 +47,6 @@ button:hover {
 #btnCalc {
   background-color: #559955;
   color: #FFFFFF;
-  grid-column: 1 / span 2;
-  max-width: 30em;
 }
 #btnCalc:active { 
   background-color: #448844;
@@ -55,7 +54,6 @@ button:hover {
 #btnAdd, #btnRm {
   background-color: #555555;
   color: #FFFFFF;
-  max-width: 15em;
 }
 #btnAdd:active, #btnRm:active{
   background-color: #383838;
@@ -71,15 +69,35 @@ input[type="text"], #scopeChoice{
   border-radius: 20px;
   padding: 0.5em 1em;
   margin: 1em 0.4em;
-  width: 14em;
 }
 input[type="text"]:focus {
   border-radius: 20px;
   color: black;
   background-color: rgb(218, 216, 164);
 }
-#expenses {
+.singleCol {
+  display: grid;
   grid-column: 1 / span 2;
+}
+.splitCol {
+  display: grid;
+  grid-column: 1 / span 2;
+  grid-template-columns: repeat(2, 2fr);
+}
+#expenseList {
+  display: grid;
+  grid-column: 1 / span 2;
+}
+.expenseItem {
+  display: grid;
+  grid-template-columns: 5% 45% repeat(1, 1fr);
+}
+.expenseField {
+
+}
+.expenseCheck {
+  width: 100%;
+  height: 100%;
 }
 .textLabel {
   margin: .8em 0em;
