--- a/content/css/main.css
+++ b/content/css/main.css
@@ -8,23 +8,25 @@
 }
 body {
   font-family: montserrat-thin;
-  background-color: #F7F7F7;
+  background-color: rgb(244, 247, 244);
   box-sizing: border-box;
   font-size: .9em;
   margin: 0em;
   min-width: 32em;
+  color: rgb(56, 56, 56);
 
 }
 h1 {
   margin:0em;
 }
 .appHead {
-  background-color:#e0e0e0;
-  color:black;
+  background-color: #84ce99;
+  /* color:black; */
+  color:#FDFDFD;
   margin-bottom: .8em;
   padding: 1em 2em;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  /* border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px; */
   text-align: center;
 }
 
@@ -32,7 +34,8 @@ h1 {
   font-family: montserrat;
   min-width: 32em;
   padding:1em;
-  background-color: #e9e9e9;
+  /* background-color: #e9e9e9; */
+  background-color: #FDFDFD;
   display: grid;
   grid-template-columns: 35% repeat(1, 1fr);
   border-radius: 20px;
@@ -40,6 +43,7 @@ h1 {
 }
 #inputGrid {
   margin-bottom: 1em;
+  box-shadow: 0 4px 8px 0 rgba(169, 169, 169, 0.25);
 }
 #outputGrid {
   grid-template-columns: 1fr;
@@ -56,40 +60,38 @@ button {
   border:none;
   padding: 0.5em;
   margin:1em 0.4em;
-  max-height: 3em;
+  max-height: 2.5em;
 }
 button:hover {
   cursor: pointer;
 }
 #btnCalc {
-  background-color: #84ce99;
-  color: #000000;
-  /* color:#FFFFFF; */
+  background-color: rgb(132, 206, 153);
+  color:#FDFDFD;
 }
 #btnCalc:active { 
   background-color: #74b686;
 }
 #btnAdd{
-  background-color: #84cebe;
-  color: #000000;
+  color: rgb(56, 56, 56);
+  border:1px rgb(56, 56, 56) solid;
+  border-radius: 20px;
 }
 #btnAdd:active{
-  background-color: #79bdae;
+  background-color: rgb(230, 230, 230);
 }
 #btnSave {
-  background-color: #84b9ce;
-  color:black;
-  /* max-width: 15em; */
+  color:rgb(252, 101, 78);
+  border:1px rgb(252, 101, 78) solid;
 }
 #btnSave:active{
-  background-color: #78a8bb;
+  background-color: rgb(252, 101, 78, 0.1);
 }
 
 input[type="text"], input[type="number"], #scopeChoice{
   font-family: montserrat;
   font-size: 1em;
-  background-color: #FAFAFA;
-  color: #383838;
+  background-color: rgb(244, 247, 244);
   outline:none;
   border:1px #E0E0E0 solid;
   border-radius: 20px;
@@ -100,8 +102,8 @@ input[type="text"], input[type="number"], #scopeChoice{
 }
 input[type="text"]:focus, input[type="number"]:focus {
   border-radius: 20px;
-  color: black;
-  background-color: #fff8d3;
+  color: rgb(56, 56, 56);
+  background-color: rgba(252, 206, 78, 0.15);
 }
 .singleCol {
   display: grid;
@@ -131,7 +133,6 @@ input[type="text"]:focus, input[type="number"]:focus {
   border: none;
   padding:0em;
   margin:1em 0em;
-  color:#383838;
   outline: none;
 }
 .imgBtn:hover {
@@ -154,10 +155,11 @@ input[type="text"]:focus, input[type="number"]:focus {
   display: grid;
   grid-template-columns: 15em repeat(1, 1fr);
   margin: 0em 0em 1em 0em;
-  background-color: #e9e9e9;
+  background-color: #FDFDFD;
   padding: 1em;
   border-radius: 20px;
   max-height: 15em;
+  box-shadow: 0 4px 8px 0 rgba(169, 169, 169, 0.25);
 }
 .hide {
   display: none;
