--- a/src/dialog/Dialog.css
+++ b/src/dialog/Dialog.css
@@ -14,7 +14,6 @@
   left: 25%;
   background-color: #ffffff;
   width: 50%;
-  height: 30vh;
   border-radius: 5px;
   border: 1px rgb(100, 100, 100) solid;
 }
@@ -22,15 +21,33 @@
   background-color: rgb(160, 160, 160);
   padding: 0.5rem;
   border-radius: 3px 3px 0px 0px;
+  display: flex;
+  justify-content: flex-end;
 }
 .dialog > form {
   padding: 1rem;
   display: flex;
   flex-flow: column;
 }
-.dialog > form > .controls > button:active {
-  background-color: white;
+.dialog > form > .controls {
+  display: flex;
+  width: 25%;
+  justify-content: space-around;
 }
+.dialog > form > .controls > button,
+.dialog > form > .controls > input[type="submit"] {
+  background-color: #e0e0e0;
+  flex-basis: 100%;
+  flex-shrink: 1fr;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  margin: 0 .5rem;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+}
+/* .dialog > form > .controls > button:active {
+  background-color: white;
+} */
 .dialog > form > input {
   margin-bottom: 1rem;
 }
