refactor: clean up cra & stucture
remove unused create-react-app files
remove commented code
move components into own dir

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* OLD MONEY MAN STYLES */
 @font-face {
   font-family: montserrat;
   src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
