--- a/src/components/dialog/Dialog.css
+++ b/src/components/dialog/Dialog.css
@@ -15,14 +15,20 @@
   background-color: #ffffff;
   width: 50%;
   border-radius: 5px;
-  border: 1px rgb(100, 100, 100) solid;
 }
 .dialog > .header {
-  background-color: rgb(160, 160, 160);
-  padding: 0.5rem;
-  border-radius: 3px 3px 0px 0px;
+  padding: 0.75rem 1rem;
+  border-bottom: 1px #e0e0e0 solid;
+  font-weight: bold;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+}
+.dialog > .header button {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  padding: 0rem;
 }
 .dialog > form {
   padding: 1rem;
@@ -31,23 +37,29 @@
 }
 .dialog > form > .controls {
   display: flex;
-  width: 25%;
-  justify-content: space-around;
+  margin: 0 0 0 auto;
 }
 .dialog > form > .controls > button,
 .dialog > form > .controls > input[type="submit"] {
-  background-color: #e0e0e0;
-  flex-basis: 100%;
-  flex-shrink: 1fr;
+  background-color: transparent;
   padding: 0.5rem 1rem;
+  margin: 0 0.5rem;
+  width: auto;
+  font-weight: bold;
+  font-size: 1rem;
+  box-shadow: none;
   border: none;
   border-radius: 5px;
-  margin: 0 .5rem;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: background-color 0.1s ease-in;
 }
-/* .dialog > form > .controls > button:active {
-  background-color: white;
-} */
+.dialog > form > .controls > button:hover,
+.dialog > form > .controls > input[type="submit"]:hover {
+  background-color: #e1f3c0;
+  color:#3b4626;
+}
+
 .dialog > form > input {
+  padding: 0.5rem;
   margin-bottom: 1rem;
 }
