--- a/src/components/transaction/Transaction.css
+++ b/src/components/transaction/Transaction.css
@@ -2,6 +2,7 @@
   position: relative;
   background-color: white;
   padding: 1rem;
+  margin-top: 1rem;
   border-radius: 5px;
 }
 .tableControls {
