--- a/src/components/AppMenu.css
+++ b/src/components/AppMenu.css
@@ -1,5 +1,6 @@
+@import url(../colors.css);
 .appMenu > .bar {
-  background-color: rgb(203, 238, 162);
+  background-color: var(--primary);
   margin: 0;
   padding: 0.5rem;
   display: flex;
@@ -7,7 +8,8 @@
   height: 2.5rem;
 }
 .appMenu > .bar > h1 {
-  margin: 0;
+  font-size: 1.4rem;
+  margin: auto;
 }
 .appMenu > .bar > .burger {
   position: absolute;
@@ -22,9 +24,19 @@
 .appMenu > .drawer-wrapper {
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: var(--shadow);
   position: absolute;
   z-index: 1;
+  opacity: 100%;
+  animation: fadein 0.2s linear 1;
+}
+@keyframes fadein {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
 .appMenu .drawer {
   position: absolute;
@@ -32,29 +44,30 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
-  background-color: white;
+  background-color: var(--bkg);
   padding: 1rem;
   height: 100%;
-  width: 25%;
+  width: auto;
 }
 .appMenu .drawer > .menu {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-around;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 .appMenu .drawer > .menu > * {
   margin: 1rem 0rem;
 }
 .appMenu .drawer button {
-  background-color: rgb(203, 238, 162);
-  padding: 0.5rem 1.25rem;
+  background-color: var(--secondary);
+  color: var(--on-secondary);
+  padding: 0.5rem 1rem;
   font-size: 1rem;
-  margin: auto;
 }
 .appMenu .drawer button:hover {
-  background-color: rgb(177, 243, 119);
+  background-color: var(--secondary-alt);
+  color: var(--on-secondary-alt);
 }
 .appMenu .drawer button:active {
   transition: ease-out 0.1s;
