--- a/src/components/dialog/Dialog.css
+++ b/src/components/dialog/Dialog.css
@@ -1,3 +1,4 @@
+@import url(../../colors.css);
 .wrapper {
   position: fixed;
   left: 0;
@@ -12,7 +13,7 @@
   position: absolute;
   top: 25%;
   left: 25%;
-  background-color: #ffffff;
+  background-color: var(--bkg);
   width: 50%;
   border-radius: 5px;
 }
@@ -39,6 +40,11 @@
   display: flex;
   margin: 0 0 0 auto;
 }
+.dialog > form input {
+  background-color: var(--bkg-alt);
+  border: none;
+  border-bottom: 1px solid var(--fg);
+}
 .dialog > form > .controls > button,
 .dialog > form > .controls > input[type="submit"] {
   background-color: transparent;
@@ -55,8 +61,8 @@
 }
 .dialog > form > .controls > button:hover,
 .dialog > form > .controls > input[type="submit"]:hover {
-  background-color: #e1f3c0;
-  color:#3b4626;
+  background-color: var(--secondary-alpha);
+  color: var(--on-secondary);
 }
 
 .dialog > form > input {
