--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url(./colors.css);
 @font-face {
   font-family: montserrat;
   src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
@@ -8,15 +9,11 @@
 }
 body {
   margin: 0;
-  font-family: "montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+  font-family: "montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(238, 238, 238);
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-color: var(--bkg-alt);
+  color: var(--fg);
 }
