--- a/src/components/AppMenu/AppMenu.css
+++ b/src/components/AppMenu/AppMenu.css
@@ -1,4 +1,4 @@
-@import url(../colors.css);
+@import url(../../styles/colors.css);
 .appMenu > .bar {
   background-color: var(--primary);
   margin: 0;
