--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@import url(./styles/colors.css);
+@font-face {
+  font-family: montserrat;
+  src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
 }
-@import url(./colors.css);
+@font-face {
+  font-family: montserrat-thin;
+  src: url(./fonts/Montserrat/Montserrat-Thin.ttf);
+}
+
+body {
+  margin: 0;
+  font-family: "montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--bkg-alt);
+  color: var(--fg);
+}
 
 button {
   border-radius: 5px;
